--- a/source/pug/pages/sitemap.pug
+++ b/source/pug/pages/sitemap.pug
@@ -22,7 +22,7 @@ block main
   main
     .sitemap
       .container
-        img(src="https://via.placeholder.com/300x150", width="300", alt="Логотип проекта")
+        img("sprite", "logo", "svg", "300", "150", "Логотип проекта")
         h1 Список страниц
         ol
           each page in pages
