--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -11,8 +11,8 @@
 @font-face {
   font-style: normal;
   font-weight: 400;
-  font-family: "";
+  font-family: "inter";
 
   font-display: swap;
-  src: url("../fonts/.woff2") format("woff2");
+  src: url("../fonts/inter-v11-latin_cyrillic-400.woff2") format("woff2");
 }
