--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,7 +12,7 @@ $color-accent-second: #212121;
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
-$color-neon-blue:                   #2c39f2;
+$color-neon-blue:                   #486dd8;
 $color-torch-red:                   #ff1553;
 
 // Gradient
@@ -29,7 +29,7 @@ $fz-default:                        16px;
 // https://www.artlebedev.ru/kovodstvo/sections/159/#13
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
 
-$ff-placeholder:                    "Placeholder", "Arial", sans-serif;
+$ff-inter:                    "Inter", "Arial", sans-serif;
 
 // Animation
 // ---------------------------------
