Добавляет разметку и стили для шапки

--- a/source/pug/pages/sitemap.pug
+++ b/source/pug/pages/sitemap.pug
@@ -22,7 +22,7 @@ block main
   main
     .sitemap
       .container
-        img("sprite", "logo", "svg", "300", "150", "Логотип проекта")
+        +img("sprite", "logo", "svg", "300", "150", "Логотип проекта")
         h1 Список страниц
         ol
           each page in pages
