--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,6 +21,8 @@
 
 @import "blocks/header";
 @import "blocks/main-nav";
+@import "blocks/secondary-nav";
+@import "blocks/detail";
 @import "blocks/footer";
 @import "blocks/modal";
 @import "blocks/btn";
