--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,8 +6,9 @@
 $color-default-black:               #000000;
 $color-default-white:               #ffffff;
 $color-transparent:                 rgba(255, 255, 255, 0);
-$color-accent-main: #2c39f2;
+$color-accent-main: #486dd8;
 $color-accent-second: #212121;
+$color-text: #454545;
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
