--- a/source/pug/components/base/header.pug
+++ b/source/pug/components/base/header.pug
@@ -7,29 +7,92 @@ mixin header(headerMods, currentUrl)
       },
       {
         href: "#",
-        text: "Страница 2"
+        text: "Курсы"
       },
       {
         href: "#",
-        text: "Страница 3"
+        text: "Блог"
+      },
+    ]
+
+  -
+    const headerItems = [
+      {
+        text: ""
+      },
+      {
+        text: ""
+      },
+      {
+        text: ""
+      },
+      {
+        text: ""
+      },
+      {
+        text: ""
+      },
+      {
+        text: ""
       },
     ]
 
   header.header(class=headerMods)
-    .container
-      if(currentUrl === "index.html")
-        +icon("logo", 118, 39)
-      else
-        a.header__logo(href="index.html", aria-label="Переход на главную") Логотип
-      nav.main-nav
-        button.main-nav__toggle.btn-reset(type="button", aria-label="Переключатель отображения меню", aria-pressed="false")
-          +icon("icon-burger", 20, 20)
-        .main-nav__wrapper
-          ul.main-nav__list
-            each link in headerLinks
-              - const activeState = currentUrl === link.href
-              li.main-nav__item
-                if(activeState)
-                  span.main-nav__link.is-active= link.text
-                else
-                  a.main-nav__link(href=link.href)= link.text
+    .header__container
+      .container
+        if(currentUrl === "index.html")
+          +icon("logo", 118, 39)
+        else
+          a.header__logo(href="index.html", aria-label="Переход на главную") Логотип
+        nav.main-nav
+          button.main-nav__toggle.btn-reset(type="button", aria-label="Переключатель отображения меню", aria-pressed="false")
+            +icon("icon-burger", 20, 20)
+          .main-nav__wrapper
+            ul.main-nav__list
+              each link in headerLinks
+                - const activeState = currentUrl === link.href
+                li.main-nav__item
+                  if(activeState)
+                    span.main-nav__link.is-active= link.text
+                  else
+                    a.main-nav__link(href=link.href)= link.text
+    .header__container
+      .container
+        nav.secondary-nav
+          div.secondary-nav__list
+            details.secondary-nav__item.detail
+              summary.detail__heading Дизайн
+                +icon("arrow", 10, 10)
+              ul.detail__list
+                li.detail__item
+
+            details.secondary-nav__item.detail
+              summary.detail__heading Программирование
+                +icon("arrow", 10, 10)
+              ul.detail__list
+                li.detail__item
+
+            details.secondary-nav__item.detail
+              summary.detail__heading Аналитика
+                +icon("arrow", 10, 10)
+              ul.detail__list
+                li.detail__item
+
+            details.secondary-nav__item.detail
+              summary.detail__heading Менеджмент
+                +icon("arrow", 10, 10)
+              ul.detail__list
+                li.detail__item
+
+            details.secondary-nav__item.detail
+              summary.detail__heading Маркетинг
+                +icon("arrow", 10, 10)
+              ul.detail__list
+                li.detail__item
+
+            details.secondary-nav__item.detail
+              summary.detail__heading Финансы
+                +icon("arrow", 10, 10)
+              ul.detail__list
+                li.detail__item
+
