--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -16,3 +16,21 @@
   font-display: swap;
   src: url("../fonts/inter-v11-latin_cyrillic-400.woff2") format("woff2");
 }
+
+@font-face {
+  font-style: normal;
+  font-weight: 500;
+  font-family: "inter";
+
+  font-display: swap;
+  src: url("../fonts/inter-v11-latin_cyrillic-500.woff2") format("woff2");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 800;
+  font-family: "inter";
+
+  font-display: swap;
+  src: url("../fonts/inter-v11-latin_cyrillic-800.woff2") format("woff2");
+}
