--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,6 +30,9 @@
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
 @import "blocks/input-upload";
+@import "blocks/about";
+@import "blocks/suggestion";
+@import "blocks/statistics";
 
 // ---------------------------------
 
