--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,7 +32,8 @@
 @import "blocks/input-upload";
 @import "blocks/about";
 @import "blocks/suggestion";
-@import "blocks/statistics";
+@import "blocks/direction";
+@import "blocks/direction-item";
 
 // ---------------------------------
 
