--- a/source/sass/blocks/suggestion.scss
+++ b/source/sass/blocks/suggestion.scss
@@ -15,7 +15,7 @@
 }
 
 .suggestion__content {
-  margin-top: 355px;
+  margin-top: 354px;
   padding: 29px 28px 15px 17px;
   display: grid;
   grid-template-columns: 66% 1fr;
@@ -65,7 +65,7 @@
 p.suggestion__text {
   grid-column: 1 / 2;
   margin: 0;
-  margin-bottom: 14px;
+  margin-bottom: 15px;
   width: auto;
   font-size: 15px;
   line-height: 20px;
@@ -75,4 +75,11 @@ p.suggestion__text {
 
 .suggestion__statistics {
   grid-column: 1 / -1;
+
+  img {
+    position: static;
+    margin-left: -17px;
+    width: 402px;
+    height: 152px;
+  }
 }
