feat: добавляет блок с баннером

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,6 +34,9 @@
 @import "blocks/suggestion";
 @import "blocks/direction";
 @import "blocks/direction-item";
+@import "blocks/promo";
+@import "blocks/bunner";
+@import "blocks/preview";
 
 // ---------------------------------
 
