--- a/source/pug/components/blocks/intro.pug
+++ b/source/pug/components/blocks/intro.pug
@@ -247,8 +247,47 @@ mixin intro()
                         | Маркетинговая аналитика
                       span.direction-item__text
                         | Google Ads
-
-
+    section.page-main__promo.promo
+      h2(area-label="О нас")
+      .container
+        .promo__container
+          .promo__banner.bunner
+            p.bunner__heading
+              | Агрегируем курсы по самым актуальным темам
+              | для новичков и практикующих специалистов.
+            .bunner__wrapper
+              .bunner__content
+                +img("content", "user", "png", 425, 425)
+                .bunner__preview.preview
+                  p.preview__heading
+                    | 300+ довольных пользователей
+                  p.preview__text
+                    | Дополнительно в этом методе есть
+                    | кнопка «Объединить по строкам». С
+                    | помощью неё можно объединить ячейки
+                    | выбранного диапазона построчно.
+              ul.bunner__list
+                li.bunner__item
+                  +icon("icon-user", 60, 60)
+                  h3.bunner__item-heading
+                    | Довольные пользователи
+                  p.bunner__text
+                    | Изучение тем на вебинарах с преподавателями,
+                    | наставником. После прохождения курса вы будете
+                li.bunner__item
+                  +icon("icon-courses", 60, 60)
+                  h3.bunner__item-heading
+                    | Образовательные курсы
+                  p.bunner__text
+                    | Изучение тем на вебинарах с преподавателями,
+                    | наставником. После прохождения курса вы будете
+                li.bunner__item
+                  +icon("icon-mentors", 60, 60)
+                  h3.bunner__item-heading
+                    | Менторы из больших компаний
+                  p.bunner__text
+                    | Изучение тем на вебинарах с преподавателями,
+                    | наставником. После прохождения курса вы будете
 
 
 
