--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -37,6 +37,10 @@
 @import "blocks/promo";
 @import "blocks/bunner";
 @import "blocks/preview";
+@import "blocks/copyright";
+@import "blocks/category";
+@import "blocks/popular-destinations";
+@import "blocks/info";
 
 // ---------------------------------
 
