--- a/source/sass/blocks/bunner.scss
+++ b/source/sass/blocks/bunner.scss
@@ -1,66 +1,70 @@
 .bunner {
-  padding: 78px 65px 94px;
-  background-color: #f9f9f9;
-  border-radius: 72px;
+  padding: size(78px) size(65px) size(94px);
+  background-color: $color-default-white;
+  border-radius: size(72px);
 }
 
 .bunner__heading {
   margin: 0 auto;
-  margin-bottom: 16px;
-  font-size: 40px;
-  line-height: 48px;
+  margin-bottom: size(16px);
+  font-size: size(40px);
+  line-height: size(48px);
   font-weight: 600;
   text-align: center;
-  max-width: 997px;
+  max-width: size(997px);
 }
 
 .bunner__wrapper {
   display: grid;
   grid-template-columns: 37% 1fr;
-  gap: 50px;
+  gap: size(50px);
 }
 
 .bunner__list {
   margin: 0;
-  margin-top: 128px;
+  margin-top: size(128px);
   padding: 0;
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 47px;
+  gap: size(47px);
 }
 
 .bunner__item {
-  padding: 23px 72px 23px 110px;
+  padding: size(23px) size(72px) size(23px) size(110px);
   position: relative;
-  max-width: 630px;
-  background-color: #f0f0f0;
-  border-radius: 30px;
+  max-width: size(630px);
+  background-color: #fafafa;
+  border-radius: size(30px);
 
   svg {
     position: absolute;
-    top: 23px;
-    left: 27px;
+    width: size(60px);
+    height: size(60px);
+    top: size(23px);
+    left: size(27px);
   }
 }
 
 .bunner__item-heading {
   margin: 0;
-  margin-bottom: 4px;
-  font-size: 25px;
-  line-height: 40px;
+  margin-bottom: size(4px);
+  font-size: size(25px);
+  line-height: size(40px);
   font-weight: 400;
   color: #181515;
 }
 
 .bunner__text {
   margin: 0;
-  line-height: 26px;
+  line-height: size(26px);
   color: #747474;
 }
 
 .bunner__content {
   img {
-    margin-bottom: 70px;
+    margin-bottom: size(70px);
+    width: size(425px);
+    height: size(383px);
   }
 }
