--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,40 +1,42 @@
 .about__container {
-  padding: 165px 0 54px;
+  padding: size(165px) 0 size(54px);
   display: grid;
-  grid-template-columns: 1fr 558px;
+  grid-template-columns: 1fr size(558px);
 
   h1 {
     margin: 0;
-    margin-bottom: 31px;
-    width: 687px;
-    font-size: 50px;
-    line-height: 61px;
+    margin-bottom: size(31px);
+    width: size(687px);
+    font-size: size(50px);
+    line-height: size(61px);
     font-weight: 700;
   }
 
   p {
     margin: 0;
-    margin-bottom: 47px;
-    width: 459px;
-    line-height: 23px;
+    margin-bottom: size(47px);
+    width: size(459px);
+    line-height: size(23px);
     font-weight: 500;
     color: #9e9e9e;
   }
 
   a {
     position: relative;
-    padding: 30px 119px 29px 60px;
-    line-height: 19px;
-    border-radius: 20px;
-    max-width: 459px;
+    padding: size(30px) size(119px) size(29px) size(60px);
+    line-height: size(19px);
+    border-radius: size(20px);
+    max-width: size(459px);
 
     svg {
       position: absolute;
+      width: size(45px);
+      height: size(45px);
       top: 0;
       right: 0;
       left: 0;
       bottom: 0;
-      margin: auto 46px auto auto;
+      margin: auto size(46px) auto auto;
     }
   }
 }
