--- a/source/sass/blocks/detail.scss
+++ b/source/sass/blocks/detail.scss
@@ -1,20 +1,22 @@
 .detail {
 
   &:not(:last-child) {
-    padding-right: 26px;
-    margin-right: 47px;
-    border-right: 1px solid #ececec;
+    padding-right: size(26px);
+    margin-right: size(47px);
+    border-right: size(1px) solid #ececec;
   }
 }
 
 .detail__heading {
-  padding: 6px 0 6px 0;
+  padding: size(6px) 0;
   color: #bababa;
-  line-height: 19px;
+  line-height: size(19px);
 
   svg {
     position: static;
-    margin: 0 21px 0 23px;
+    margin: 0 size(21px) 0 size(23px);
+    width: size(10px);
+    height: size(10px);
   }
 
   &::marker {
