--- a/source/sass/blocks/direction.scss
+++ b/source/sass/blocks/direction.scss
@@ -1,12 +1,25 @@
+.direction {
+  position: relative;
+  z-index: 0;
+
+  img {
+    position: absolute;
+    width: size(3023px);
+    height: size(1426px);
+    bottom: 0;
+    z-index: -1;
+  }
+}
+
 .direction__container {
-  padding: 51px 0 149px;
+  padding: size(51px) 0 size(149px);
 }
 
 .direction__heading {
   margin: 0;
-  margin-bottom: 58px;
-  font-size: 40px;
-  line-height: 50px;
+  margin-bottom: size(58px);
+  font-size: size(40px);
+  line-height: size(50px);
   font-weight: 600;
 }
 
@@ -16,13 +29,13 @@
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 48px 20px;
+  gap: size(48px) size(20px);
 }
 
 .direction__link {
   padding: 0;
   display: block;
   color: #6b6b6b;
-  background-color: #f9f9f9;
-  border-radius: 56px;
+  background-color: $color-default-white;
+  border-radius: size(56px);
 }
