--- a/source/sass/blocks/suggestion.scss
+++ b/source/sass/blocks/suggestion.scss
@@ -1,61 +1,67 @@
 .suggestion {
   position: relative;
-  width: 488px;
+  width: size(488px);
+  z-index: 0;
 
   img {
     position: absolute;
     display: block;
-    top: -199px;
-    left: -55px;
-    width: 578px;
-    height: 646px;
+    top: size(-199px);
+    left: size(-55px);
+    width: size(578px);
+    height: size(646px);
     max-width: none;
     z-index: -1;
   }
 }
 
 .suggestion__content {
-  margin-top: 354px;
-  padding: 29px 28px 15px 17px;
+  margin-top: size(354px);
+  padding: size(29px) size(28px) size(15px) size(17px);
   display: grid;
   grid-template-columns: 66% 1fr;
   background-color: #f8f7fc;
   border: 0.74px solid #e3e3e3;
-  border-radius: 20px;
+  border-radius: size(20px);
 }
 
 .suggestion__title {
-  margin-bottom: 4px;
+  margin-bottom: size(4px);
   display: grid;
-  grid-template-columns: 145px 80px;
-  column-gap: 17px;
+  grid-template-columns: size(145px) size(80px);
+  column-gap: size(17px);
 
   h2 {
     margin: 0;
-    font-size: 20px;
-    line-height: 25px;
+    font-size: size(20px);
+    line-height: size(25px);
     font-weight: 500;
   }
 
   p {
     margin: 0;
+
+    svg {
+      width: size(12px);
+      height: size(12px);
+    }
   }
 }
 
 .suggestion__info {
-  margin-top: 3px;
+  margin-top: size(3px);
   display: flex;
   flex-direction: column;
   align-items: end;
   grid-column: 2 / -1;
   grid-row: 1 / 3;
-  font-size: 15px;
-  line-height: 18px;
+  font-size: size(15px);
+  line-height: size(18px);
   font-weight: 500;
 }
 
 .suggestion__price {
-  margin-bottom: 4px;
+  margin-bottom: size(4px);
 }
 
 .suggestion__counter {
@@ -65,10 +71,10 @@
 p.suggestion__text {
   grid-column: 1 / 2;
   margin: 0;
-  margin-bottom: 15px;
+  margin-bottom: size(15px);
   width: auto;
-  font-size: 15px;
-  line-height: 20px;
+  font-size: size(15px);
+  line-height: size(20px);
   color: #6f6e6e;
   font-weight: 400;
 }
@@ -78,8 +84,8 @@ p.suggestion__text {
 
   img {
     position: static;
-    margin-left: -17px;
-    width: 402px;
-    height: 152px;
+    margin-left: size(-17px);
+    width: size(402px);
+    height: size(152px);
   }
 }
