--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -1,7 +1,15 @@
 .container {
   width: 100%;
-  max-width: 1280px;
+  max-width: size(1280px);
   margin: 0 auto;
+
+  @include vp-1919 {
+    max-width: 1280px;
+  }
+
+  @include vp-1439 {
+    margin: 0 80px;
+  }
 
   @include vp-1023 {
     padding: 0 24px;
