--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -14,8 +14,8 @@ body {
 html {
   font-style: normal;
   font-weight: 400;
-  font-size: $fz-default;
-  line-height: 24px;
+  font-size: size-desktop($fz-default);
+  line-height: size(24px);
   font-family: $ff-inter;
   color: $color-default-black;
 
@@ -25,6 +25,10 @@ html {
   text-rendering: optimizeLegibility;
   // если по прежнему есть проблемы с выравниванием
   // https://transfonter.org/ - включите настройку https://prnt.sc/12rnt6g и переконвертируйте шрифт
+
+  @include vp-1919 {
+    font-size: $fz-default;
+  }
 }
 
 body {
